Use built-in toList instead of collecting